--- a/src/components/ActionPanel/common/ActionPanelContent/ActionPanelContent.css
+++ b/src/components/ActionPanel/common/ActionPanelContent/ActionPanelContent.css
@@ -1,7 +1,15 @@
 .action-panel-content {
     padding: 10px;
 }
+.action-panel-content::after{
+    /* create a line */
+    content: '';
+    display: block;
+    width: 100%;
+    height: 3px;
+    background-color: var(--border-color);
 
+}
 .action-panel-heading {
     color: var(--text-color);
     text-align: center;
